fixed api for reports and added ReportApiController + ReportService
